--- a/fonts/iconic/css/material-design-iconic-font.css
+++ b/fonts/iconic/css/material-design-iconic-font.css
@@ -7,6 +7,7 @@
   src: url('../fonts/Material-Design-Iconic-Font.woff2?v=2.2.0') format('woff2'), url('../fonts/Material-Design-Iconic-Font.woff?v=2.2.0') format('woff'), url('../fonts/Material-Design-Iconic-Font.ttf?v=2.2.0') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 .zmdi {
   display: inline-block;
@@ -15,6 +16,7 @@
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-display: swap;
 }
 .zmdi-hc-lg {
   font-size: 1.33333333em;
